[package]
name = "ringr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ringr"
path = "src/main.rs"

[dependencies]
# for interacting with GPIO on the Raspberry Pi
rppal = "0.17.1"

# for playing sounds or speach synthesis
soloud = { version = "1" }

# for installing as a system service
service-manager = "0.6.0"